# Minesweeper2026

./: README.md
Minesweeper2024/ROS Codes/Lab Codes/src/minesweeper/: CMakeLists.txt  package.xml
Minesweeper2024/ROS Codes/Lab Codes/src/minesweeper/minesweeper/: rasp_temp.py
Minesweeper2026/Arduino/: Code_Review.md  MotorController.ino  ahmed_nady_code_cytron.ino
Minesweeper2026/Arduino/MotorController/: Config.h  Diagnostics.cpp  Diagnostics.h  Encoder.cpp  Encoder.h  IMU.cpp  IMU.h  LiftController.cpp  LiftController.h  MotionController.cpp  MotionController.h  MotorController.ino  MotorDriver.cpp  MotorDriver.h  Odometry.cpp  Odometry.h  PIDController.cpp  PIDController.h  Safety.cpp  Safety.h  Sensors.cpp  Sensors.h  SerialProtocol.cpp  SerialProtocol.h
Minesweeper2026/Files/: Minesweeper plan 23_24.xlsx  mine2026.xlsx
Minesweeper2026/Files/Report/: Assiut Robotics_Technical Report_2026.docx  Control-System-Report.docx  Vision System.docx  report.md
Minesweeper2026/old/: Components Sheet.xlsx
Minesweeper2026/old/Ebda3/: Deck CV.doc  Minesweeper_Roport_IEEE.docx  min_t.glb  mine5.glb  mine5.mtl  mine5_1t.glb  mine5_2t.glb  mine5_t.glb  مجالات_الابتكارات_العلمية[1][1].docx  وصف المشروع.docx  يصب.docx
Minesweeper2026/old/إبداع/: Assiut Robotics_Technical Report.docx  New Microsoft Word Document (3).docx  mine5.gltf  أحمد عبدالحكيم مجالات_الابتكارات_العلمية[1].docx  مجالات الابتكارات العلمية أحمد عرابى.docx
Project Folders/: Functions Discription.xlsx
Project Folders/Config/: PinConfig.txt
Vision Codes/: EasyOCRextraction.py
(+35 files in other folders)
